# rust-learn

./: .dockerignore  .env.example  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.hardhat  GEMINI.md  LICENSE  Makefile  PERMISSIONS.md  README.md  THIRD_PARTY.md  TODO.md  docker-compose.yml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
docker/: minio.Dockerfile  worker.Dockerfile
ethereum/: Dockerfile  derive_eth_account.py  geth-entrypoint.sh
ethereum/artifacts/: IERC1363.abi  LearnToken.abi  LearnTokenPresigner.abi  PlatformImporter.abi
ethereum/contracts/: @openzeppelin  LearnToken.sol  LearnTokenPresigner.sol  PlatformImporter.sol
k8s/: README.md  deploy.sh
k8s/base/: anvil.yaml  app.yaml  configmap.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  postgres.yaml  rustfs.yaml  secrets.yaml  web.yaml  worker.yaml
migrations/2023-12-16-205150_create_new_tables/: up.sql
migrations/2023-12-17-000555_add_path_course_chapter_content/: down.sql  up.sql
migrations/2024-01-10-194143_add_new_fields_to_users/: down.sql  up.sql
migrations/2024-01-12-115100_authorization/: up.sql
migrations/2024-01-15-074833_authorization_correct/: down.sql  up.sql
migrations/2024-01-15-142353_authorization_renames_to_authentification/: down.sql  up.sql
migrations/2024-01-26-000633_create_organizations/: up.sql
migrations/2024-02-07-203615_create_organization_and_associations/: down.sql  up.sql
migrations/2024-02-08-042528_create_role_platform_hierarchy_permission_and_user_role/: down.sql  up.sql
migrations/2024-02-09-033919_install/: down.sql  up.sql
migrations/2024-02-12-003533_not_null/: down.sql  up.sql
migrations/2024-03-07-032716_add_course_related_roles_permissions/: down.sql  up.sql
migrations/2024-03-17-225219_create_db_version_control/: down.sql  up.sql
migrations/2024-08-27-223943_add_roles_to_database/: down.sql  up.sql
migrations/2025-05-14-154945_separate_role_tables/: down.sql  up.sql
migrations/2025-05-14-200506_rename_role_id_fields/: down.sql  up.sql
migrations/2025-08-05-191124_persistent_states/: down.sql  up.sql
migrations/2025-08-12-092758_add_platform_roles_and_hierarchy/: down.sql  up.sql
migrations/2025-10-18-005632_delete_created_for_column/: down.sql  up.sql
scripts/: anvil-entrypoint.sh  app-entrypoint.sh  fetch_openzeppelin.sh
src/: lib.rs  main.rs
src/api/: mod.rs  (+7 more)
tests/: blockchain_integration_tests.rs  course_content_management.rs  course_permissions.rs  db_connection_middleware_tests.rs  middleware_access_control.rs  minio.rs  organization_permissions.rs  platform_permissions.rs  platform_permissions_unit.rs  s3.rs
web/: next.config.ts
(+126 files in other folders)
