[package]
name = "rust-learn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9"
actix-service = "2.0.2"
futures = "0.3"
infer = "0.16.0"
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono"] }
dotenvy = "0.15"
diesel_migrations = "2.1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7"
bcrypt = "0.15"
jsonwebtoken = "9"
log = "0.4"
strum = "0.26"
strum_macros = "0.26"
time = "0.3.36"
ethers = "2.0.14"
