[package]
name = "rust-learn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.11"
actix-service = "2.0.3"
futures = "0.3"
infer = "0.19.0"
diesel = { version = "2.2.12", features = ["postgres", "r2d2", "chrono", "numeric"] }
dotenvy = "0.15"
diesel_migrations = "2.2.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7"
serde_json = "1"
bcrypt = "0.17"
jsonwebtoken = "9"
log = "0.4"
strum = "0.27"
strum_macros = "0.27"
time = "0.3.41"
ethers = "2.0.14"
ethers-solc = { version = "2", features = ["svm"] }
minio = "0.3.0"
http = "1"

# For decoding solc .bin hex output in the solc fallback
hex = "0.4"

# Async runtime used by actix and for MinIO helpers
tokio = { version = "1", features = ["rt", "macros", "io-util", "sync"] }
anyhow = "1.0"
bigdecimal = { version = "0.4", default-features = true, features = ["serde"] }

[dev-dependencies]
# used only by tests to generate random mnemonics
bip39 = "1.1"
getrandom = "0.2"

[[test]]
name = "blockchain_integration_tests"
path = "tests/blockchain_integration_tests.rs"
harness = true
